worked on getting app dir working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["osascript", "POSIX", "scpt", "trafikverket"]
+  "cSpell.words": ["osascript", "POSIX", "scpt", "trafikverket", "USERPROFILE"]
 }
