Revert "started on db implementation"
This reverts commit c2a9eeea69b4ff62f09d5289977a523889dacfe1.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,3 @@
 {
-  "cSpell.words": [
-    "DATETIME",
-    "fullsize",
-    "osascript",
-    "POSIX",
-    "scpt",
-    "trafikverket",
-    "USERPROFILE"
-  ]
+  "cSpell.words": ["osascript", "POSIX", "scpt", "trafikverket", "USERPROFILE"]
 }
