started on plugin implementation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["osascript", "POSIX", "scpt", "trafikverket", "USERPROFILE"]
+  "cSpell.words": [
+    "fullsize",
+    "osascript",
+    "POSIX",
+    "scpt",
+    "trafikverket",
+    "USERPROFILE"
+  ]
 }
