--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,3 @@
 {
-  "cSpell.words": [
-    "fullsize",
-    "osascript",
-    "POSIX",
-    "scpt",
-    "trafikverket",
-    "USERPROFILE"
-  ]
+  "cSpell.words": []
 }
