--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": []
+  "cSpell.words": [
+    "appkit",
+    "linusromland",
+    "nsstring",
+    "NSURL",
+    "objc",
+    "SETDESKWALLPAPER",
+    "winapi",
+    "winuser"
+  ]
 }
