started on plugin support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
   "cSpell.words": [
     "appkit",
+    "cdylib",
+    "debuginfo",
+    "libloading",
     "linusromland",
     "nsstring",
     "NSURL",
