Added basic support for plugins

--- a/.gitignore
+++ b/.gitignore
@@ -402,3 +402,7 @@ appsettings.json
 
 sounds/*
 !sounds/.gitkeep
+
+# Ignore all plugins
+WallpaperChanger/Plugins/*
+!WallpaperChanger/Plugins/sample_image.jpg
