Added support for config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["SENDCHANGE", "SETDESKWALLPAPER", "SPIF", "UPDATEINIFILE"]
+  "cSpell.words": [
+    "Newtonsoft",
+    "SENDCHANGE",
+    "SETDESKWALLPAPER",
+    "SPIF",
+    "UPDATEINIFILE"
+  ]
 }
