--- a/Plugins/SamplePlugin/SamplePlugin.csproj
+++ b/Plugins/SamplePlugin/SamplePlugin.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\..\Interfaces\Interfaces.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
