--- a/WallpaperChanger/WallpaperChanger.csproj
+++ b/WallpaperChanger/WallpaperChanger.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NLog" Version="5.3.2" />
   </ItemGroup>
 
   <PropertyGroup>
