--- a/Plugins/SamplePlugin/SamplePlugin.csproj
+++ b/Plugins/SamplePlugin/SamplePlugin.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NLog" Version="5.3.2" />
   </ItemGroup>
 
   <PropertyGroup>
