created base for tray menu

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,10 @@
     "shortdate",
     "SPIF",
     "UPDATEINIFILE",
-    "wallpal"
+    "wallpal",
+    "autoboot",
+    "portalocker",
+    "startfile",
+    "pystray"
   ]
 }
